--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -56,23 +56,23 @@ jobs:
       - name: Run tests
         run: php artisan test --stop-on-failure
 
-  swagger-check:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 8.2
-          extensions: mbstring, pdo, pdo_mysql, bcmath
-          coverage: none
-
-      - name: Install Composer dependencies
-        uses: ramsey/composer-install@v3
-        with:
-          composer-options: "--no-interaction --prefer-dist"
-
-      - name: Generate Swagger Docs
-        run: php artisan l5-swagger:generate
+#  swagger-check:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#
+#      - name: Set up PHP
+#        uses: shivammathur/setup-php@v2
+#        with:
+#          php-version: 8.2
+#          extensions: mbstring, pdo, pdo_mysql, bcmath
+#          coverage: none
+#
+#      - name: Install Composer dependencies
+#        uses: ramsey/composer-install@v3
+#        with:
+#          composer-options: "--no-interaction --prefer-dist"
+#
+#      - name: Generate Swagger Docs
+#        run: php artisan l5-swagger:generate
